Fix click-twice bug. Realign layout as per wireframe SalesRegistrationV3

--- a/trunk/vipro/web/css/default.css
+++ b/trunk/vipro/web/css/default.css
@@ -46,3 +46,8 @@
 	background-image: url("../images/background.jpg") !important;
     background-repeat:no-repeat;
 }
+
+.no-borders tr, .no-borders td {
+    background: none !important;
+    border: none !important;
+}
